Add time and autoupdating

--- a/src/App.css
+++ b/src/App.css
@@ -18,22 +18,21 @@ h2 {
 
 h3 {
   font-size: 22px;
-  font-weight: 400;
   margin: 0;
 }
 
 h4 {
-  color: #666;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: 400;
+  line-height: 1.4;
   margin: 0;
 }
 
 a {
-  border-bottom: solid 1px #999;
   color: inherit;
   font-weight: 500;
-  text-decoration: none;
+  text-underline-offset: 1px;
+  text-decoration-color: #333;
 }
 
 article,
@@ -62,14 +61,19 @@ footer {
   margin: 2em 0;
 }
 
+.left {
+  flex-shrink: 0;
+  margin-right: 15px;
+  text-align: center;
+  width: 64px;
+}
+
 .emoji {
   background-color: #eee;
   border-radius: 64px;
-  flex-shrink: 0;
   font-size: 32px;
   height: 64px;
   line-height: 64px;
-  margin-right: 15px;
   text-align: center;
   width: 64px;
 }
@@ -77,4 +81,9 @@ footer {
 .detail {
   flex-grow: 1;
   max-width: 300px;
+}
+
+.time {
+  color: #666;
+  font-size: 0.9em;
 }
