--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,45 @@
-html,
 body {
+  background-color: var( --color-temp, #cef );
+  margin: 1em;
   padding: 0;
+  font-family: -apple-system, system-ui, sans-serif;
+}
+
+header {
+  margin-top: 2em;
+}
+
+h3 {
+  font-size: 22px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h4 {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.4;
+  margin: 3px 0 5px 0;
 }
 
 a {
   color: inherit;
+  font-weight: 500;
   text-decoration: none;
+  text-decoration-color: #333;
+  text-underline-offset: 1px;
 }
 
-* {
-  box-sizing: border-box;
+h4 a:hover {
+  text-decoration: underline;
+}
+
+article {
+  padding: 1em 0;
+}
+
+footer {
+  cursor: pointer;
+  font-size: 32px;
+  margin-bottom: 1em;
+  text-align: center;
 }
