--- a/components/SortBar.module.css
+++ b/components/SortBar.module.css
@@ -3,10 +3,11 @@
 }
 
 .button {
-  border-color: var(--color-blue);
+  border-color: var(--color-gray);
   border-style: solid;
   border-width: 1px 0 1px 1px;
-  color: var(--color-blue);
+  color: var(--color-gray);
+  cursor: pointer;
   font-size: 0.9em;
   padding: 8px 12px;
   white-space: nowrap;
@@ -23,7 +24,7 @@
 
 .asc,
 .desc {
-  background-color: var(--color-blue);
+  background-color: var(--color-gray);
   color: #fff;
 }
 
